dev/vm/k8s/platform/apps/bff/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bff
  namespace: apps
spec:
  selector:
    app: bff
  ports:
    - port: 80
      targetPort: 8080
