dev/vm/k8s/platform/apps/bff/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bff
  namespace: apps
spec:
  rules:
    - host: bff.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bff
                port:
                  number: 80
